[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/canvas/canvas_optimized.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/canvas/scratch_drawer.gd" type="Script" id=2]

[node name="ScratchDrawer" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1016.0
margin_bottom = 24.0

[node name="LineOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 24.0
text = "Line"
items = [ "Line", null, false, 0, null, "Gradient", null, false, 1, null, "Rounded", null, false, 2, null, "Thick", null, false, 4, null, "Width Curve", null, false, 5, null ]
selected = 0

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 64.0
margin_bottom = 24.0

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 96.0
margin_bottom = 24.0
text = "clr"
color = Color( 0.156863, 0.156863, 0.196078, 1 )

[node name="Erase" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 162.0
margin_bottom = 24.0
text = "Erase"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 166.0
margin_right = 170.0
margin_bottom = 24.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1016.0
margin_bottom = 592.0
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1009.0
margin_bottom = 557.0
color = Color( 0.298039, 0.298039, 0.298039, 1 )

[node name="CanvasOptimized" parent="VBoxContainer/PanelContainer/ColorRect" instance=ExtResource( 1 )]

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/LineOptionButton" to="." method="_on_LineOptionButton_item_selected"]
[connection signal="drawing" from="VBoxContainer/PanelContainer/ColorRect/CanvasOptimized" to="." method="_on_CanvasOptimized_drawing"]
